ADD: header/hero

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -26,6 +26,8 @@ img {
 
 body {
   font-family: 'Montserrat', sans-serif;
+
+  background-color: #464646;
 }
 
 address {
@@ -34,4 +36,13 @@ address {
 
 a {
   text-decoration: none;
+  color: var(--first-text-color);
+}
+
+p {
+  color: var(--first-text-color);
+}
+
+h1{
+  color: var(--main-title-color);
 }
