--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,13 @@
 @import "./base/reset";
 
 @import "./components/container";
+@import "./components/logo";
+@import "./components/nav";
+@import "./components/btn";
+@import "./components/call";
+@import "./components/form";
+@import "./components/preTitle";
+
+@import "./layout/header";
+@import "./layout/hero";
+@import "./layout/about";
