--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,9 +1,10 @@
 :root {
   --main-title-color: #ffffff;
-  --second-title-color: #212121;
-  --first-text-color: #212121;
-  --second-text-color: #757575;
-  --third-text-color: #ffffff;
+  --second-title-color: #45525B;
+  --third-tittle-color: #2877BA;
+  --first-text-color: #ffffff;
+  --second-text-color: #333333;
+  --third-text-color: #6F7278;
   --accent-text-color: rgba(255, 255, 255, 0.6);
-  --accent-color: #2196f3;
+  --accent-color: #F19817;
 }
