--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
 :root {
   --main-title-color: #ffffff;
-  --second-title-color: #212121;
-  --first-text-color: #212121;
-  --second-text-color: #757575;
-  --third-text-color: #ffffff;
+  --second-title-color: #45525B;
+  --third-tittle-color: #2877BA;
+  --first-text-color: #ffffff;
+  --second-text-color: #333333;
+  --third-text-color: #6F7278;
   --accent-text-color: rgba(255, 255, 255, 0.6);
-  --accent-color: #2196f3;
+  --accent-color: #F19817;
 }
 
 p,
@@ -36,6 +37,7 @@ img {
 
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #464646;
 }
 
 address {
@@ -44,12 +46,19 @@ address {
 
 a {
   text-decoration: none;
+  color: var(--first-text-color);
+}
+
+p {
+  color: var(--first-text-color);
+}
+
+h1 {
+  color: var(--main-title-color);
 }
 
 .container {
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
@@ -62,8 +71,134 @@ a {
     width: 768px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1920px) {
   .container {
-    width: 1200px;
+    width: 1920px;
   }
+}
+
+.nav__item {
+  display: flex;
+  gap: 27px;
+}
+
+.nav__list {
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.btn {
+  width: 123px;
+  height: 54px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--accent-color);
+  color: var(--first-text-color);
+  border: none;
+  border-radius: 55px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.call {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+}
+
+.call__text {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.call__svg {
+  width: 10px;
+  height: 10px;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 179px;
+}
+.form div:first-child {
+  margin-right: 10px;
+}
+.form div:nth-child(2) {
+  margin-right: 34px;
+}
+
+.form__input {
+  width: 344px;
+  height: 54px;
+  padding: 15px 20px;
+  color: var(--first-text-color);
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(3px);
+  border: 1px solid white;
+  border-radius: 42px;
+  outline: none;
+}
+
+.form__input::placeholder {
+  color: var(--first-text-color);
+}
+
+.form__input:hover, .form__input:focus {
+  border-color: var(--accent-color);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 45px;
+  padding-right: 45px;
+  margin-bottom: 152px;
+}
+
+.header__call {
+  display: flex;
+  gap: 25px;
+}
+
+.hero {
+  padding-top: 15px;
+  text-align: center;
+  background-image: url(../../images/hero_bg.jpg);
+  height: 941px;
+}
+
+.hero__title {
+  font-size: 60px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 46px;
+}
+
+.hero__text {
+  font-size: 18px;
+  line-height: 174%;
+  margin-bottom: 82px;
+}
+
+.hero__btn {
+  width: 64px;
+  height: 64px;
+  border: 1px solid white;
+  background-color: transparent;
+  border-radius: 50%;
+}
+.hero__btn svg {
+  fill: white;
+}
+
+.hero__btn:hover {
+  background-color: white;
+  border-color: var(--accent-color);
+}
+.hero__btn:hover svg {
+  fill: black;
 }/*# sourceMappingURL=main.css.map */
