--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,9 @@
 @import "./components/call";
 @import "./components/form";
 @import "./components/preTitle";
+@import './components/slider';
 
 @import "./layout/header";
 @import "./layout/hero";
 @import "./layout/about";
+@import "./layout/materials";
