--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,90 @@ h1 {
   margin-bottom: 15px;
 }
 
+.slider {
+  width: 1480px;
+}
+
+.slider__list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.slider__item {
+  width: 300px;
+  height: 422px;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.slider__img {
+  border-radius: 20px;
+}
+
+.slider__content-box {
+  padding: 20px 21px 25px 20px;
+  text-align: left;
+}
+
+.slider__preTitle {
+  color: var(--third-text-color);
+  font-size: 12px;
+  margin-bottom: 6px;
+}
+
+.slider__title {
+  color: var(--second-title-color);
+  font-size: 20px;
+  margin-bottom: 42px;
+}
+
+.slider__price-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider__text {
+  color: #0D1B39;
+  font-size: 13px;
+}
+
+.slider__price {
+  color: #45525B;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.slider__currency {
+  color: #45525B;
+  font-size: 15px;
+  font-weight: 600;
+  display: flex;
+  padding-top: 8px;
+}
+
+.slider__price-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.slider__btn {
+  width: 49px;
+  height: 49px;
+  padding: 12px;
+  background-color: var(--accent-color);
+  border: none;
+  border-radius: 50%;
+}
+.slider__btn svg {
+  fill: white;
+}
+
+.slider__btn:hover svg {
+  fill: var(--third-tittle-color);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -262,4 +346,49 @@ h1 {
   color: var(--third-text-color);
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.materials {
+  background-color: white;
+  padding: 150px 220px;
+  background-image: url(../../images/materials-bg.jpg);
+}
+
+.materials__box {
+  text-align: center;
+}
+
+.materials__title {
+  color: var(--second-title-color);
+  font-size: 48px;
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+
+.materials__list {
+  width: 561px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f1f1f1;
+  padding: 6px;
+  margin: 0 auto;
+  border-radius: 44px;
+  cursor: pointer;
+  margin-bottom: 66px;
+}
+
+.materials__item {
+  font-size: 18px;
+  padding: 4px 24px;
+}
+
+.materials__item:hover {
+  background-color: rgba(255, 255, 255, 0.65);
+  border-radius: 32px;
+}
+
+.active {
+  background-color: white;
+  border-radius: 32px;
 }/*# sourceMappingURL=main.css.map */
