--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,96 +1,197 @@
-.slider{
-    width: 1480px;
+
+.slider__list {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+
+  min-width: 0;
 }
 
-.slider__list{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+.modern-paddig-slider{
+    padding: 0 95px;
 }
 
-.slider__item{
-    width: 300px;
-    height: 422px;
+.slider__item {
+  width: 300px;
+  height: 422px;
 
-    background-color: white;
-    border-radius: 20px;
+  background-color: white;
+  border-radius: 20px;
 }
 
-.slider__img{
-    border-radius: 20px;
+.slider__img {
+  border-radius: 20px;
 }
 
-.slider__content-box{
-    padding: 20px 21px 25px 20px;
+.slider__content-box {
+  padding: 20px 21px 25px 20px;
 
-    text-align: left;
+  text-align: left;
+
+  width: 300px;
 }
 
-.slider__preTitle{
-    color: var(--third-text-color);
-    font-size: 12px;
+.slider__preTitle {
+  color: var(--third-text-color);
+  font-size: 12px;
 
-    margin-bottom: 6px;
+  margin-bottom: 6px;
 }
 
-.slider__title{
-    color: var(  --second-title-color);
-    font-size: 20px;
+.slider__title {
+  color: var(--second-title-color);
+  font-size: 20px;
 
-    margin-bottom: 42px;
+  margin-bottom: 42px;
 }
 
-.slider__price-box{
-    display: flex;
-    justify-content: space-between;
+.slider__price-box {
+  display: flex;
+  justify-content: space-between;
 }
 
-.slider__text{
-    color: #0D1B39;
-    font-size: 13px;
-    
+.slider__text {
+  color: #0d1b39;
+  font-size: 13px;
 }
 
-.slider__price{
-    color: #45525B;
-    font-size: 22px;
-    font-weight: 600;
+.slider__price {
+  color: #45525b;
+  font-size: 22px;
+  font-weight: 600;
 }
 
-.slider__currency{
-    color: #45525B;
-    font-size: 15px;
-    font-weight: 600;
-    
-    display: flex;
-    padding-top: 8px;
+.slider__currency {
+  color: #45525b;
+  font-size: 15px;
+  font-weight: 600;
+
+  display: flex;
+  padding-top: 8px;
 }
 
-.slider__price-container{
-    display: flex;
-    align-items: center;
-    gap: 5px;
+.slider__price-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-.slider__btn{
-    width: 49px;
-    height: 49px;
+.slider__btn {
+  width: 49px;
+  height: 49px;
 
-    padding: 12px;
+  padding: 12px;
 
-    background-color: var(--accent-color);
+  background-color: var(--accent-color);
 
-    border: none;
-    border-radius: 50%;
+  border: none;
+  border-radius: 50%;
 
-    svg{
-        
-        fill: white;
-    }
+  svg {
+    fill: white;
+  }
 }
 
-.slider__btn:hover{
-    svg{
-        fill: var(--third-tittle-color);
-    }
+.slider__btn:hover {
+  svg {
+    fill: var(--third-tittle-color);
+  }
+}
+
+//--------------------------------------------------------
+
+.slick-track {
+  display: flex;
+  gap: 30px;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+
+//----------------------------------------------
+.slider__item.slick-slide {
+  width: 300px;
+}
+
+.slider .slick-arrow {
+  width: 60px;
+  height: 60px;
+
+  padding: 10px;
+
+  border: 1px solid black;
+  border-radius: 50%;
+
+  font-size: 0;
+
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+
+  margin-top: -30px;
+
+  transform: translateY(-50%);
+  background-repeat: no-repeat;
+}
+
+.slider .slick-arrow.slick-prev {
+  left: 60px;
+  transform: translateY(-50%) translateX(-100%);
+  background: url("../../images/arrow-left.svg") center/60% no-repeat;
+}
+
+.slider .slick-arrow.slick-next {
+  right: 0;
+  background: url("../../images/arrow-right.svg") center/60% no-repeat;
+}
+
+.slider .slick-arrow.slick-disabled {
+  opacity: 0.2;
+}
+
+
+
+//--------------------------------------------------------------------------
+
+.slider__item.slick-slide {
+  width: 300px;
+}
+
+.work__box .slick-arrow {
+  width: 60px;
+  height: 60px;
+
+  padding: 10px;
+
+  border: 1px solid black;
+  border-radius: 50%;
+
+  font-size: 0;
+
+  position: absolute;
+  z-index: 10;
+
+  transform: translateY(-50%);
+  background-repeat: no-repeat;
+
+  top: -80px;
+  right: 0;
+}
+
+.work__box .slick-arrow.slick-prev {
+    right: 40px;
+  transform: translateY(-50%) translateX(-100%);
+  background: url("../../images/arrow-left.svg") center/60% no-repeat;
+}
+
+.work__box .slick-arrow.slick-next {
+
+  background: url("../../images/arrow-right.svg") center/60% no-repeat;
+}
+
+.work__box .slick-arrow.slick-disabled {
+  opacity: 0.2;
 }
