--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,5 @@
 @import "./layout/hero";
 @import "./layout/about";
 @import "./layout/materials";
+@import "./layout/work";
+@import './layout/statistics';
