--- a/css/main.css
+++ b/css/main.css
@@ -613,4 +613,102 @@ h1 {
   font-size: 20px;
   font-weight: 600;
   color: #52503B;
+}
+
+.testimonials {
+  position: relative;
+  padding-top: 150px;
+  padding-bottom: 150px;
+  padding-left: 315px;
+  background-color: white;
+}
+
+.testimonials__box {
+  position: relative;
+}
+
+.testimonials__title {
+  font-size: 48px;
+  font-weight: 500;
+  color: var(--second-title-color);
+  margin-bottom: 60px;
+}
+
+.testimonials__list {
+  display: flex;
+  gap: 30px;
+  min-width: 0;
+}
+
+.testimonials__item {
+  width: 584px;
+  height: 297px;
+  padding: 30px;
+}
+
+.testimonials__star-box {
+  margin-bottom: 10px;
+}
+
+.testimonials__item-title {
+  font-size: 24px;
+  color: var(--second-text-color);
+  margin-bottom: 20px;
+}
+
+.testimonials__text {
+  font-size: 15px;
+  color: var(--second-text-color);
+  margin-bottom: 20px;
+}
+
+.testimonials__avtor {
+  color: var(--second-title-color);
+  font-size: 16px;
+  border-left: 1px solid var(--accent-color);
+  padding-left: 10px;
+}
+
+.testimonials__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.testimonials__list.slick-list {
+  overflow: visible;
+}
+
+.testimonials__item.slick-slide.slick-active {
+  min-width: 580px;
+}
+
+.testimonials__box .slick-arrow {
+  width: 60px;
+  height: 60px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 50%;
+  font-size: 0;
+  position: absolute;
+  z-index: 10;
+  transform: translateY(-50%);
+  background-repeat: no-repeat;
+  top: 40px;
+  right: 0px;
+}
+
+.testimonials__box .slick-arrow.slick-prev {
+  right: 390px;
+  transform: translateY(-50%) translateX(-100%);
+  background: url("../../images/arrow-left.svg") center/60% no-repeat;
+}
+
+.testimonials__box .slick-arrow.slick-next {
+  right: 350px;
+  background: url("../../images/arrow-right.svg") center/60% no-repeat;
+}
+
+.testimonials__box .slick-arrow.slick-disabled {
+  opacity: 0.2;
 }/*# sourceMappingURL=main.css.map */
