--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,3 +19,5 @@
 @import './layout/statistics';
 @import './layout/gallery';
 @import './layout/testimonials';
+@import './layout/information';
+@import './layout/footer'
