--- a/css/main.css
+++ b/css/main.css
@@ -621,6 +621,7 @@ h1 {
   padding-bottom: 150px;
   padding-left: 315px;
   background-color: white;
+  overflow: hidden;
 }
 
 .testimonials__box {
@@ -711,4 +712,129 @@ h1 {
 
 .testimonials__box .slick-arrow.slick-disabled {
   opacity: 0.2;
+}
+
+.information {
+  padding: 110px 425px;
+  background-color: #45525b;
+  display: flex;
+  justify-content: space-between;
+}
+
+.information__box {
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
+  margin-right: 156px;
+}
+
+.information__adress-title {
+  color: var(--first-text-color);
+  text-transform: uppercase;
+  opacity: 0.3;
+  margin-bottom: 10px;
+}
+
+.information__adress-text {
+  color: var(--first-text-color);
+  line-height: 33px;
+}
+
+.information__title {
+  color: var(--first-text-color);
+  text-transform: uppercase;
+  opacity: 0.3;
+  margin-bottom: 10px;
+}
+
+.information__mail {
+  color: var(--first-text-color);
+  margin-bottom: 10px;
+}
+
+.information__form-box {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.information__input {
+  width: 305px;
+  padding: 19px 30px;
+  border-radius: 40px;
+  border: none;
+  outline: none;
+}
+
+.information__area {
+  width: 100%;
+  height: 128px;
+  padding: 18px 30px;
+  border-radius: 40px;
+  border: 1px solid transparent;
+  outline: none;
+  margin-bottom: 25px;
+}
+
+.footer {
+  background-color: #292C32;
+  padding: 110px 315px 62px 315px;
+}
+
+.footer__wraper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+
+.footer__logo-box {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.footer__logo-text {
+  width: 330px;
+  font-size: 15px;
+  opacity: 0.8;
+}
+
+.footer__container {
+  display: flex;
+  gap: 89px;
+}
+.footer__container ul:first-child {
+  margin-right: 129px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.footer__title-list {
+  color: var(--accent-color);
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 22px;
+}
+
+.footer__link {
+  font-size: 15px;
+  opacity: 0.8;
+  display: flex;
+  gap: 8px;
+}
+
+.copyright__box {
+  display: flex;
+  justify-content: space-between;
+  opacity: 0.8;
+}
+
+.copyright__wrap {
+  display: flex;
+  gap: 27px;
 }/*# sourceMappingURL=main.css.map */
