--- a/sass/layout/_materials.scss
+++ b/sass/layout/_materials.scss
@@ -3,7 +3,7 @@
   padding: 150px 220px;
 
   background-image:
-      url(../../images/materials-bg.jpg);
+      url(../images/materials-bg.jpg);
 }
 
 .materials__box {
