--- a/sass/layout/_testimonials.scss
+++ b/sass/layout/_testimonials.scss
@@ -105,12 +105,12 @@
 .testimonials__box .slick-arrow.slick-prev {
   right: 390px;
   transform: translateY(-50%) translateX(-100%);
-  background: url("../images/arrow-left.svg") center/60% no-repeat;
+  background: url("/images/arrow-left.svg") center/60% no-repeat;
 }
 
 .testimonials__box .slick-arrow.slick-next {
   right: 350px;
-  background: url("../images/arrow-right.svg") center/60% no-repeat;
+  background: url("/images/arrow-right.svg") center/60% no-repeat;
 }
 
 .testimonials__box .slick-arrow.slick-disabled {
