--- a/css/main.css
+++ b/css/main.css
@@ -338,7 +338,7 @@ h1 {
 .hero {
   padding-top: 15px;
   text-align: center;
-  background-image: url(../images/hero_bg.jpg);
+  background-image: url(../images/hero-bg.jpg);
   height: 941px;
 }
 
