--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -140,12 +140,12 @@
 .slider .slick-arrow.slick-prev {
   left: 60px;
   transform: translateY(-50%) translateX(-100%);
-  background: url("/images/arrow-left.svg") center/60% no-repeat;
+  background: url(../images/arrow-left.svg) center/60% no-repeat;
 }
 
 .slider .slick-arrow.slick-next {
   right: 0;
-  background: url("/images/arrow-right.svg") center/60% no-repeat;
+  background: url(../images/arrow-right.svg) center/60% no-repeat;
 }
 
 .slider .slick-arrow.slick-disabled {
