--- a/css/main.css
+++ b/css/main.css
@@ -338,7 +338,7 @@ h1 {
 .hero {
   padding-top: 15px;
   text-align: center;
-  background-image: url("../../images/hero-bg.jpg");
+  background-image: url(../images/hero-bg.jpg);
   height: 941px;
 }
 
@@ -497,12 +497,16 @@ h1 {
   font-size: 48px;
   font-weight: 500;
   margin-bottom: 30px;
+  position: relative;
+  z-index: 10;
 }
 
 .statistics__text {
   font-size: 18px;
   color: var(--third-text-color);
   margin-bottom: 60px;
+  position: relative;
+  z-index: 10;
 }
 
 .statistics__box {
@@ -531,6 +535,8 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 19px;
+  position: relative;
+  z-index: 10;
 }
 
 .statistics__number {
@@ -562,12 +568,14 @@ h1 {
   position: absolute;
   left: 0;
   top: -100px;
+  display: inline-block;
 }
 
 .statistics__img-bg2 {
   position: absolute;
   bottom: -90px;
   right: 0;
+  display: inline-block;
 }
 
 .gallery {
