--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -4,7 +4,7 @@
     text-align: center;
 
      background-image:
-      url("../../images/hero-bg.jpg");
+      url(../images/hero-bg.jpg);
 
       height: 941px;
 }
