--- a/sass/layout/_statistics.scss
+++ b/sass/layout/_statistics.scss
@@ -13,12 +13,18 @@
   font-weight: 500;
 
   margin-bottom: 30px;
+
+  position: relative;
+  z-index: 10;
 }
 
 .statistics__text {
   font-size: 18px;
   color: var(--third-text-color);
   margin-bottom: 60px;
+
+  position: relative;
+  z-index: 10;
 }
 
 .statistics__box {
@@ -51,6 +57,9 @@
   display: flex;
   flex-direction: column;
   gap: 19px;
+
+  position: relative;
+  z-index: 10;
 }
 
 .statistics__number {
@@ -86,10 +95,14 @@
   position: absolute;
   left: 0;
   top: -100px;
+
+  display: inline-block;
 }
 
 .statistics__img-bg2 {
   position: absolute;
   bottom: -90px;
   right: 0;
+
+  display: inline-block;
 }
