--- a/css/main.css
+++ b/css/main.css
@@ -310,11 +310,11 @@ h1 {
 .work__box .slick-arrow.slick-prev {
   right: 40px;
   transform: translateY(-50%) translateX(-100%);
-  background: url("../../images/arrow-left.svg") center/60% no-repeat;
+  background: url(../images/arrow-left.svg) center/60% no-repeat;
 }
 
 .work__box .slick-arrow.slick-next {
-  background: url("../../images/arrow-right.svg") center/60% no-repeat;
+  background: url(../images/arrow-right.svg) center/60% no-repeat;
 }
 
 .work__box .slick-arrow.slick-disabled {
@@ -710,12 +710,12 @@ h1 {
 .testimonials__box .slick-arrow.slick-prev {
   right: 390px;
   transform: translateY(-50%) translateX(-100%);
-  background: url("/images/arrow-left.svg") center/60% no-repeat;
+  background: url(../images/arrow-left.svg) center/60% no-repeat;
 }
 
 .testimonials__box .slick-arrow.slick-next {
   right: 350px;
-  background: url("/images/arrow-right.svg") center/60% no-repeat;
+  background: url(../images/arrow-right.svg) center/60% no-repeat;
 }
 
 .testimonials__box .slick-arrow.slick-disabled {
