--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -184,12 +184,12 @@
 .work__box .slick-arrow.slick-prev {
     right: 40px;
   transform: translateY(-50%) translateX(-100%);
-  background: url("../../images/arrow-left.svg") center/60% no-repeat;
+  background: url(../images/arrow-left.svg) center/60% no-repeat;
 }
 
 .work__box .slick-arrow.slick-next {
 
-  background: url("../../images/arrow-right.svg") center/60% no-repeat;
+  background: url(../images/arrow-right.svg) center/60% no-repeat;
 }
 
 .work__box .slick-arrow.slick-disabled {
