--- a/sass/layout/_materials.scss
+++ b/sass/layout/_materials.scss
@@ -2,8 +2,7 @@
   background-color: white;
   padding: 150px 220px;
 
-  background-image:
-      url(../images/materials-bg.jpg);
+  background-image: url(../images/materials-bg.jpg);
 }
 
 .materials__box {
