--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,10 +1,10 @@
 :root {
   --main-title-color: #ffffff;
-  --second-title-color: #45525B;
-  --third-tittle-color: #2877BA;
+  --second-title-color: #45525b;
+  --third-tittle-color: #2877ba;
   --first-text-color: #ffffff;
   --second-text-color: #333333;
-  --third-text-color: #6F7278;
+  --third-text-color: #6f7278;
   --accent-text-color: rgba(255, 255, 255, 0.6);
-  --accent-color: #F19817;
+  --accent-color: #f19817;
 }
