--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,48 +1,47 @@
-.hero{
-    padding-top: 15px;
+.hero {
+  padding-top: 15px;
 
-    text-align: center;
+  text-align: center;
 
-     background-image:
-      url(../images/hero-bg.jpg);
+  background-image: url(../images/hero-bg.jpg);
 
-      height: 941px;
+  height: 941px;
 }
 
-.hero__title{
-    font-size: 60px;
-    font-weight: 700;
+.hero__title {
+  font-size: 60px;
+  font-weight: 700;
 
-    text-transform: uppercase;
+  text-transform: uppercase;
 
-    margin-bottom: 46px;
+  margin-bottom: 46px;
 }
 
-.hero__text{
-    font-size: 18px;
-    line-height: 174%;
+.hero__text {
+  font-size: 18px;
+  line-height: 174%;
 
-    margin-bottom: 82px;
+  margin-bottom: 82px;
 }
 
-.hero__btn{
-    width: 64px;
-    height: 64px;
+.hero__btn {
+  width: 64px;
+  height: 64px;
 
-    border: 1px solid white;
-    background-color: transparent;
-    border-radius: 50%;
+  border: 1px solid white;
+  background-color: transparent;
+  border-radius: 50%;
 
-    svg{
-        fill: white;
-    }
+  svg {
+    fill: white;
+  }
 }
 
-.hero__btn:hover{
-    background-color: white;
-    border-color: var(--accent-color);
+.hero__btn:hover {
+  background-color: white;
+  border-color: var(--accent-color);
 
-    svg{
-        fill: black;
-    }
+  svg {
+    fill: black;
+  }
 }
