--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,7 @@ h1 {
   color: var(--first-text-color);
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(3px);
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 42px;
   outline: none;
 }
