--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -148,6 +148,8 @@
 
 .slider .slick-arrow.slick-disabled {
   opacity: 0.2;
+
+  cursor: auto;
 }
 
 //--------------------------------------------------------------------------
@@ -189,4 +191,6 @@
 
 .work__box .slick-arrow.slick-disabled {
   opacity: 0.2;
+
+  cursor: auto;
 }
