--- a/css/main.css
+++ b/css/main.css
@@ -66,11 +66,6 @@ h1 {
     width: 480px;
   }
 }
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
 @media screen and (min-width: 1920px) {
   .container {
     width: 1920px;
@@ -78,16 +73,37 @@ h1 {
 }
 
 .logo {
-  margin-right: 611px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+@media screen and (min-width: 1920px) {
+  .logo {
+    text-align: start;
+    margin-right: 611px;
+  }
 }
 
 .nav {
-  margin-right: 365px;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1920px) {
+  .nav {
+    padding: 0;
+    margin: 0;
+    margin-right: 365px;
+  }
 }
 
 .nav__item {
   display: flex;
-  gap: 27px;
+  justify-content: space-between;
+}
+@media screen and (min-width: 1920px) {
+  .nav__item {
+    justify-content: center;
+    gap: 27px;
+  }
 }
 
 .nav__list {
@@ -128,14 +144,22 @@ h1 {
 
 .form {
   display: flex;
-  justify-content: center;
-  margin-bottom: 179px;
+  flex-direction: column;
+  gap: 30px;
 }
-.form div:first-child {
-  margin-right: 10px;
-}
-.form div:nth-child(2) {
-  margin-right: 34px;
+@media screen and (min-width: 1920px) {
+  .form {
+    flex-direction: row;
+    gap: 0;
+    justify-content: center;
+    margin-bottom: 179px;
+  }
+  .form div:first-child {
+    margin-right: 10px;
+  }
+  .form div:nth-child(2) {
+    margin-right: 34px;
+  }
 }
 
 .form__input {
@@ -154,7 +178,8 @@ h1 {
   color: var(--first-text-color);
 }
 
-.form__input:hover, .form__input:focus {
+.form__input:hover,
+.form__input:focus {
   border-color: var(--accent-color);
 }
 
@@ -175,7 +200,12 @@ h1 {
 }
 
 .modern-paddig-slider {
-  padding: 0 95px;
+  padding: 0 35px;
+}
+@media screen and (min-width: 1920px) {
+  .modern-paddig-slider {
+    padding: 0 95px;
+  }
 }
 
 .slider__item {
@@ -187,12 +217,25 @@ h1 {
 
 .slider__img {
   border-radius: 20px;
+  width: 100%;
+  height: 230px;
+}
+@media screen and (min-width: 1920px) {
+  .slider__img {
+    width: 300px;
+    height: auto;
+  }
 }
 
 .slider__content-box {
   padding: 20px 21px 25px 20px;
   text-align: left;
-  width: 300px;
+  width: 100%;
+}
+@media screen and (min-width: 1920px) {
+  .slider__content-box {
+    width: 300px;
+  }
 }
 
 .slider__preTitle {
@@ -263,7 +306,12 @@ h1 {
 }
 
 .slider__item.slick-slide {
-  width: 300px;
+  width: 100%;
+}
+@media screen and (min-width: 1920px) {
+  .slider__item.slick-slide {
+    width: 300px;
+  }
 }
 
 .slider .slick-arrow {
@@ -297,8 +345,10 @@ h1 {
   cursor: auto;
 }
 
-.slider__item.slick-slide {
-  width: 300px;
+@media screen and (min-width: 1920px) {
+  .slider__item.slick-slide {
+    width: 300px;
+  }
 }
 
 .work__box .slick-arrow {
@@ -331,48 +381,88 @@ h1 {
   cursor: auto;
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  padding-left: 45px;
-  padding-right: 45px;
-  margin-bottom: 152px;
+@media screen and (min-width: 1920px) {
+  .header {
+    display: flex;
+    align-items: center;
+    padding-left: 45px;
+    padding-right: 45px;
+    margin-bottom: 152px;
+  }
 }
 
 .header__call {
-  display: flex;
-  gap: 25px;
+  display: none;
+}
+@media screen and (min-width: 1920px) {
+  .header__call {
+    display: flex;
+    gap: 25px;
+  }
 }
 
 .hero {
-  padding-top: 15px;
-  text-align: center;
   background-image: url(../images/hero-bg.jpg);
-  height: 941px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-bottom: 15px;
+}
+@media screen and (min-width: 1920px) {
+  .hero {
+    padding-top: 15px;
+    padding-bottom: 0;
+    text-align: center;
+    background-image: url(../images/hero-bg.jpg);
+    height: 941px;
+  }
 }
 
 .hero__title {
-  font-size: 60px;
-  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
   text-transform: uppercase;
-  margin-bottom: 46px;
+  margin-bottom: 36px;
+}
+@media screen and (min-width: 1920px) {
+  .hero__title {
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 46px;
+  }
 }
 
 .hero__text {
-  font-size: 18px;
-  line-height: 174%;
-  margin-bottom: 82px;
+  padding: 20px;
+  font-size: 14px;
+  line-height: 124%;
+  margin-bottom: 42px;
+}
+@media screen and (min-width: 1920px) {
+  .hero__text {
+    padding: 0;
+    font-size: 18px;
+    line-height: 174%;
+    margin-bottom: 82px;
+  }
 }
 
 .hero__btn {
-  width: 64px;
-  height: 64px;
-  border: 1px solid white;
-  background-color: transparent;
-  border-radius: 50%;
+  display: none;
 }
-.hero__btn svg {
-  fill: white;
+@media screen and (min-width: 1920px) {
+  .hero__btn {
+    display: block;
+    width: 64px;
+    height: 64px;
+    border: 1px solid white;
+    background-color: transparent;
+    border-radius: 50%;
+    margin: 0 auto;
+  }
+  .hero__btn svg {
+    fill: white;
+  }
 }
 
 .hero__btn:hover {
@@ -384,23 +474,37 @@ h1 {
 }
 
 .about {
-  padding: 100px 376px;
-  margin: 0 auto;
-  background-color: white;
-  display: flex;
-  gap: 101px;
   background-color: #fafafc;
-  overflow: hidden;
+  padding: 20px 30px;
+}
+@media screen and (min-width: 1920px) {
+  .about {
+    padding: 100px 376px;
+    margin: 0 auto;
+    display: flex;
+    gap: 101px;
+    overflow: hidden;
+  }
 }
 
 .about__title {
-  font-size: 48px;
+  font-size: 28px;
+  line-height: 33px;
   font-weight: 500;
-  line-height: 53px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 1920px) {
+  .about__title {
+    font-size: 48px;
+    line-height: 53px;
+    margin-bottom: 0;
+  }
 }
 
-.about__wrap {
-  width: 561px;
+@media screen and (min-width: 1920px) {
+  .about__wrap {
+    width: 561px;
+  }
 }
 
 .about__text {
@@ -440,8 +544,13 @@ h1 {
 
 .materials {
   background-color: white;
-  padding: 150px 220px;
+  padding: 15px 22px;
   background-image: url(../images/materials-bg.jpg);
+}
+@media screen and (min-width: 1920px) {
+  .materials {
+    padding: 150px 220px;
+  }
 }
 
 .materials__box {
@@ -450,13 +559,18 @@ h1 {
 
 .materials__title {
   color: var(--second-title-color);
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 500;
   margin-bottom: 40px;
 }
+@media screen and (min-width: 1920px) {
+  .materials__title {
+    font-size: 48px;
+  }
+}
 
 .materials__list {
-  width: 561px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -467,10 +581,21 @@ h1 {
   cursor: pointer;
   margin-bottom: 66px;
 }
+@media screen and (min-width: 1920px) {
+  .materials__list {
+    width: 561px;
+  }
+}
 
 .materials__item {
-  font-size: 18px;
-  padding: 4px 24px;
+  font-size: 14px;
+  padding: 2px 14px;
+}
+@media screen and (min-width: 1920px) {
+  .materials__item {
+    font-size: 18px;
+    padding: 4px 24px;
+  }
 }
 
 .materials__item:hover {
@@ -486,30 +611,51 @@ h1 {
 .work__box {
   position: relative;
   background-color: #FAFAFC;
-  padding: 130px 315px;
+  padding: 13px 31px;
+}
+@media screen and (min-width: 1920px) {
+  .work__box {
+    padding: 130px 315px;
+  }
 }
 
 .work__title {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 500;
   color: var(--second-title-color);
-  margin-bottom: 60px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1920px) {
+  .work__title {
+    font-size: 48px;
+    margin-bottom: 60px;
+  }
 }
 
 .statistics {
   position: relative;
   background-color: white;
-  padding: 150px 554px 150px 425px;
+  padding: 15px;
   text-align: center;
   overflow: hidden;
 }
+@media screen and (min-width: 1920px) {
+  .statistics {
+    padding: 150px 554px 150px 425px;
+  }
+}
 
 .statistics__title {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 500;
   margin-bottom: 30px;
   position: relative;
   z-index: 10;
+}
+@media screen and (min-width: 1920px) {
+  .statistics__title {
+    font-size: 48px;
+  }
 }
 
 .statistics__text {
@@ -520,8 +666,10 @@ h1 {
   z-index: 10;
 }
 
-.statistics__box {
-  display: flex;
+@media screen and (min-width: 1920px) {
+  .statistics__box {
+    display: flex;
+  }
 }
 
 .statistics__img {
@@ -592,7 +740,12 @@ h1 {
 .gallery {
   background-color: #fafafc;
   text-align: center;
-  padding: 130px 315px;
+  padding: 13px;
+}
+@media screen and (min-width: 1920px) {
+  .gallery {
+    padding: 130px 315px;
+  }
 }
 
 .gallery .preTitle {
@@ -602,8 +755,14 @@ h1 {
 .gallery__title {
   font-size: 48px;
   font-weight: 500;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   text-align: start;
+}
+@media screen and (min-width: 1920px) {
+  .gallery__title {
+    font-size: 28px;
+    margin-bottom: 60px;
+  }
 }
 
 .gallery__list {
@@ -611,11 +770,22 @@ h1 {
   gap: 30px;
   margin-bottom: 60px;
 }
+@media screen and (min-width: 1920px) {
+  .gallery__list {
+    gap: 15px;
+    margin-bottom: 30px;
+  }
+}
 
 .gallery__row {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 15px;
+}
+@media screen and (min-width: 1920px) {
+  .gallery__row {
+    gap: 30px;
+  }
 }
 
 .gallery__img {
@@ -631,16 +801,23 @@ h1 {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 600;
-  color: #52503B;
+  color: #52503b;
 }
 
 .testimonials {
   position: relative;
-  padding-top: 150px;
-  padding-bottom: 150px;
-  padding-left: 315px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 20px;
   background-color: white;
-  overflow: hidden;
+}
+@media screen and (min-width: 1920px) {
+  .testimonials {
+    padding-top: 150px;
+    padding-bottom: 150px;
+    padding-left: 315px;
+    overflow: hidden;
+  }
 }
 
 .testimonials__box {
@@ -648,10 +825,15 @@ h1 {
 }
 
 .testimonials__title {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 500;
   color: var(--second-title-color);
   margin-bottom: 60px;
+}
+@media screen and (min-width: 1920px) {
+  .testimonials__title {
+    font-size: 48px;
+  }
 }
 
 .testimonials__list {
@@ -661,10 +843,15 @@ h1 {
 }
 
 .testimonials__item {
-  width: 584px;
+  width: 354px;
   height: 297px;
   padding: 30px;
   border: 1px solid rgba(82, 80, 59, 0.1);
+}
+@media screen and (min-width: 1920px) {
+  .testimonials__item {
+    width: 584px;
+  }
 }
 
 .testimonials__star-box {
@@ -691,17 +878,25 @@ h1 {
 }
 
 .testimonials__img {
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: none;
+}
+@media screen and (min-width: 1920px) {
+  .testimonials__img {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 
 .testimonials__list.slick-list {
   overflow: visible;
 }
 
-.testimonials__item.slick-slide.slick-active {
-  min-width: 580px;
+@media screen and (min-width: 1920px) {
+  .testimonials__item.slick-slide.slick-active {
+    min-width: 580px;
+  }
 }
 
 .testimonials__box .slick-arrow {
@@ -736,17 +931,29 @@ h1 {
 }
 
 .information {
-  padding: 110px 425px;
+  padding: 15px;
   background-color: #45525b;
-  display: flex;
-  justify-content: space-between;
+}
+@media screen and (min-width: 1920px) {
+  .information {
+    padding: 110px 425px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .information__box {
   display: flex;
-  flex-direction: column;
   gap: 45px;
-  margin-right: 156px;
+  margin-right: 15px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1920px) {
+  .information__box {
+    flex-direction: column;
+    margin-right: 156px;
+    margin-bottom: 0;
+  }
 }
 
 .information__adress-title {
@@ -775,8 +982,15 @@ h1 {
 
 .information__form-box {
   display: flex;
+  flex-direction: column;
   gap: 20px;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 1920px) {
+  .information__form-box {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .information__input {
@@ -794,24 +1008,40 @@ h1 {
   border-radius: 40px;
   border: 1px solid transparent;
   outline: none;
+  resize: none;
   margin-bottom: 25px;
 }
 
 .footer {
   background-color: #292c32;
-  padding: 110px 315px 62px 315px;
+  padding: 15px;
+}
+@media screen and (min-width: 1920px) {
+  .footer {
+    padding: 110px 315px 62px 315px;
+  }
 }
 
 .footer__wraper {
-  display: flex;
-  justify-content: space-between;
   margin-bottom: 80px;
+}
+@media screen and (min-width: 1920px) {
+  .footer__wraper {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .footer__logo-box {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  margin-bottom: 50px;
+}
+@media screen and (min-width: 1920px) {
+  .footer__logo-box {
+    margin-bottom: 0;
+  }
 }
 
 .footer__logo-text {
@@ -822,10 +1052,16 @@ h1 {
 
 .footer__container {
   display: flex;
-  gap: 89px;
+  gap: 39px;
 }
-.footer__container ul:first-child {
-  margin-right: 129px;
+@media screen and (min-width: 1920px) {
+  .footer__container .footer__container {
+    display: flex;
+    gap: 89px;
+  }
+  .footer__container .footer__container ul:first-child {
+    margin-right: 129px;
+  }
 }
 
 .footer__list {
