--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,15 +1,22 @@
 .form {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 30px;
 
-  margin-bottom: 179px;
+  @media screen and (min-width: 1920px) {
+    flex-direction: row;
+    gap: 0;
+    justify-content: center;
 
-  div:first-child {
-    margin-right: 10px;
-  }
+    margin-bottom: 179px;
 
-  div:nth-child(2) {
-    margin-right: 34px;
+    div:first-child {
+      margin-right: 10px;
+    }
+
+    div:nth-child(2) {
+      margin-right: 34px;
+    }
   }
 }
 
@@ -22,7 +29,7 @@
   color: var(--first-text-color);
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(3px);
-  border: 1px solid  rgba(255, 255, 255, 0.6);;
+  border: 1px solid rgba(255, 255, 255, 0.6);
   border-radius: 42px;
   outline: none;
 }
@@ -31,6 +38,7 @@
   color: var(--first-text-color);
 }
 
-.form__input:hover, .form__input:focus{
-    border-color: var(--accent-color);
+.form__input:hover,
+.form__input:focus {
+  border-color: var(--accent-color);
 }
