--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,3 +1,8 @@
-.logo{
+.logo {
+  margin-bottom: 40px;
+  text-align: center;
+  @media screen and (min-width: 1920px) {
+    text-align: start;
     margin-right: 611px;
+  }
 }
