--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -8,7 +8,11 @@
 }
 
 .modern-paddig-slider {
-  padding: 0 95px;
+  padding: 0 35px;
+
+  @media screen and (min-width: 1920px) {
+    padding: 0 95px;
+  }
 }
 
 .slider__item {
@@ -21,6 +25,13 @@
 
 .slider__img {
   border-radius: 20px;
+  width: 100%;
+  height: 230px;
+
+   @media screen and (min-width: 1920px) {
+    width: 300px;
+    height: auto;
+  }
 }
 
 .slider__content-box {
@@ -28,7 +39,11 @@
 
   text-align: left;
 
-  width: 300px;
+  width: 100%;
+
+   @media screen and (min-width: 1920px) {
+    width: 300px;
+  }
 }
 
 .slider__preTitle {
@@ -111,7 +126,10 @@
 
 //----------------------------------------------
 .slider__item.slick-slide {
-  width: 300px;
+width: 100%;
+  @media screen and (min-width: 1920px) {
+    width: 300px;
+  }
 }
 
 .slider .slick-arrow {
@@ -155,7 +173,10 @@
 //--------------------------------------------------------------------------
 
 .slider__item.slick-slide {
-  width: 300px;
+
+  @media screen and (min-width: 1920px) {
+    width: 300px;
+  }
 }
 
 .work__box .slick-arrow {
