--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,24 +1,37 @@
 .about {
-  padding: 100px 376px;
-  margin: 0 auto;
-
-  background-color: white;
-
-  display: flex;
-  gap: 101px;
-
   background-color: #fafafc;
-  overflow: hidden;
+  padding: 20px 30px;
+
+  @media screen and (min-width: 1920px) {
+    padding: 100px 376px;
+    margin: 0 auto;
+
+    display: flex;
+    gap: 101px;
+
+    overflow: hidden;
+  }
 }
 
 .about__title {
-  font-size: 48px;
+  font-size: 28px;
+  line-height: 33px;
   font-weight: 500;
-  line-height: 53px;
+
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 1920px) {
+    font-size: 48px;
+    line-height: 53px;
+
+    margin-bottom: 0;
+  }
 }
 
 .about__wrap {
-  width: 561px;
+  @media screen and (min-width: 1920px) {
+    width: 561px;
+  }
 }
 
 .about__text {
