--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,20 +1,32 @@
 .footer {
   background-color: #292c32;
 
-  padding: 110px 315px 62px 315px;
+  padding: 15px;
+
+  @media screen and (min-width: 1920px) {
+    padding: 110px 315px 62px 315px;
+  }
 }
 
 .footer__wraper {
-  display: flex;
-  justify-content: space-between;
-
   margin-bottom: 80px;
+
+  @media screen and (min-width: 1920px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .footer__logo-box {
   display: flex;
   flex-direction: column;
   gap: 30px;
+
+  margin-bottom: 50px;
+
+  @media screen and (min-width: 1920px) {
+    margin-bottom: 0;
+  }
 }
 
 .footer__logo-text {
@@ -26,10 +38,18 @@
 
 .footer__container {
   display: flex;
-  gap: 89px;
+  gap: 39px;
 
-  ul:first-child {
-    margin-right: 129px;
+
+  @media screen and (min-width: 1920px) {
+    .footer__container {
+      display: flex;
+      gap: 89px;
+
+      ul:first-child {
+        margin-right: 129px;
+      }
+    }
   }
 }
 
@@ -58,7 +78,7 @@
   align-items: center;
 }
 
-.footer__link:hover{
+.footer__link:hover {
   opacity: 1;
 }
 
