--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -2,20 +2,30 @@
   background-color: #fafafc;
   text-align: center;
 
-  padding: 130px 315px;
+  padding: 13px;
+
+  @media screen and (min-width: 1920px) {
+    padding: 130px 315px;
+  }
 }
 
-.gallery .preTitle{
-    text-align: start;
+.gallery .preTitle {
+  text-align: start;
 }
 
 .gallery__title {
   font-size: 48px;
   font-weight: 500;
 
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 
   text-align: start;
+
+  @media screen and (min-width: 1920px) {
+    font-size: 28px;
+
+    margin-bottom: 60px;
+  }
 }
 
 .gallery__list {
@@ -23,29 +33,39 @@
   gap: 30px;
 
   margin-bottom: 60px;
+
+  @media screen and (min-width: 1920px) {
+    gap: 15px;
+
+    margin-bottom: 30px;
+  }
 }
 
-.gallery__row{
-    display: flex;
-    flex-direction: column;
+.gallery__row {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+   @media screen and (min-width: 1920px) {
     gap: 30px;
+  }
 }
 
-.gallery__img{
-    border-radius: 15px;
+.gallery__img {
+  border-radius: 15px;
 }
 
-.gallery_btn{
-    width: 207px;
+.gallery_btn {
+  width: 207px;
 
-    padding: 15px 20px;
+  padding: 15px 20px;
 
-    background-color: transparent;
-    border: 1px solid black;
-    border-radius: 60px;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 60px;
 
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 600;
-    color: #52503B;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 600;
+  color: #52503b;
 }
