--- a/sass/layout/_information.scss
+++ b/sass/layout/_information.scss
@@ -1,18 +1,29 @@
 .information {
-  padding: 110px 425px;
+  padding: 15px;
 
   background-color: #45525b;
 
-  display: flex;
-  justify-content: space-between;
+  @media screen and (min-width: 1920px) {
+    padding: 110px 425px;
+
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .information__box {
   display: flex;
-  flex-direction: column;
   gap: 45px;
 
-  margin-right: 156px;
+  margin-right: 15px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1920px) {
+    flex-direction: column;
+
+    margin-right: 156px;
+    margin-bottom: 0;
+  }
 }
 
 .information__adress-title {
@@ -48,9 +59,15 @@
 
 .information__form-box {
   display: flex;
+  flex-direction: column;
   gap: 20px;
 
   margin-bottom: 20px;
+
+  @media screen and (min-width: 1920px) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .information__input {
@@ -71,6 +88,7 @@
 
   border: 1px solid transparent;
   outline: none;
+  resize: none;
 
   margin-bottom: 25px;
 }
