--- a/sass/layout/_statistics.scss
+++ b/sass/layout/_statistics.scss
@@ -1,21 +1,29 @@
 .statistics {
   position: relative;
   background-color: white;
-  padding: 150px 554px 150px 425px;
+   padding: 15px;
 
   text-align: center;
 
   overflow: hidden;
+
+  @media screen and (min-width: 1920px) {
+     padding: 150px 554px 150px 425px;
+  }
 }
 
 .statistics__title {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 500;
 
   margin-bottom: 30px;
 
   position: relative;
   z-index: 10;
+
+  @media screen and (min-width: 1920px) {
+     font-size: 48px;
+  }
 }
 
 .statistics__text {
@@ -28,7 +36,9 @@
 }
 
 .statistics__box {
-  display: flex;
+  @media screen and (min-width: 1920px) {
+     display: flex;
+  }
 }
 
 .statistics__img {
