--- a/sass/layout/_testimonials.scss
+++ b/sass/layout/_testimonials.scss
@@ -1,12 +1,18 @@
 .testimonials {
   position: relative;
-  padding-top: 150px;
-  padding-bottom: 150px;
-  padding-left: 315px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 20px;
 
   background-color: white;
 
-  overflow: hidden;
+  @media screen and (min-width: 1920px) {
+    padding-top: 150px;
+    padding-bottom: 150px;
+    padding-left: 315px;
+
+    overflow: hidden;
+  }
 }
 
 .testimonials__box {
@@ -14,12 +20,16 @@
 }
 
 .testimonials__title {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 500;
 
   color: var(--second-title-color);
 
   margin-bottom: 60px;
+
+  @media screen and (min-width: 1920px) {
+    font-size: 48px;
+  }
 }
 
 .testimonials__list {
@@ -30,12 +40,16 @@
 }
 
 .testimonials__item {
-  width: 584px;
+  width: 354px;
   height: 297px;
 
   padding: 30px;
 
-  border: 1px solid rgba(#52503B, 0.1);
+  border: 1px solid rgba(#52503b, 0.1);
+
+  @media screen and (min-width: 1920px) {
+    width: 584px;
+  }
 }
 
 .testimonials__star-box {
@@ -67,10 +81,14 @@
 }
 
 .testimonials__img {
-  position: absolute;
+  display: none;
+  @media screen and (min-width: 1920px) {
+    display: block;
+    position: absolute;
 
-  top: 0;
-  left: 0;
+    top: 0;
+    left: 0;
+  }
 }
 
 //--------------------------------------------------------------
@@ -80,7 +98,9 @@
 }
 
 .testimonials__item.slick-slide.slick-active {
-  min-width: 580px;
+  @media screen and (min-width: 1920px) {
+    min-width: 580px;
+  }
 }
 
 .testimonials__box .slick-arrow {
