--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,10 @@ h1 {
   }
 }
 
+.nav__item .nav__list:hover {
+  color: var(--accent-color);
+}
+
 .nav__list {
   font-size: 14px;
   text-transform: uppercase;
