--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,10 @@ h1 {
   font-weight: 500;
 }
 
+.btn:hover {
+  color: black;
+}
+
 .call {
   display: flex;
   gap: 12px;
@@ -349,6 +353,18 @@ h1 {
   cursor: auto;
 }
 
+.slider .slick-arrow.slick-prev:hover {
+  background-color: var(--accent-color);
+}
+
+.slider .slick-arrow.slick-next:hover {
+  background-color: var(--accent-color);
+}
+
+.slider .slick-arrow.slick-disabled:hover {
+  background-color: transparent;
+}
+
 @media screen and (min-width: 1920px) {
   .slider__item.slick-slide {
     width: 300px;
@@ -383,6 +399,18 @@ h1 {
 .work__box .slick-arrow.slick-disabled {
   opacity: 0.2;
   cursor: auto;
+}
+
+.work__box .slick-arrow.slick-prev:hover {
+  background-color: var(--accent-color);
+}
+
+.work__box .slick-arrow.slick-next:hover {
+  background-color: var(--accent-color);
+}
+
+.work__box .slick-arrow.slick-disabled:hover {
+  background-color: transparent;
 }
 
 @media screen and (min-width: 1920px) {
@@ -808,6 +836,11 @@ h1 {
   color: #52503b;
 }
 
+.gallery_btn:hover {
+  background-color: var(--accent-color);
+  color: white;
+}
+
 .testimonials {
   position: relative;
   padding-top: 15px;
@@ -924,9 +957,21 @@ h1 {
   background: url(../images/arrow-left.svg) center/60% no-repeat;
 }
 
+.testimonials__box .slick-arrow.slick-prev:hover {
+  background-color: var(--accent-color);
+}
+
 .testimonials__box .slick-arrow.slick-next {
   right: 350px;
   background: url(../images/arrow-right.svg) center/60% no-repeat;
+}
+
+.testimonials__box .slick-arrow.slick-next:hover {
+  background-color: var(--accent-color);
+}
+
+.testimonials__box .slick-arrow.slick-disabled:hover {
+  background-color: transparent;
 }
 
 .testimonials__box .slick-arrow.slick-disabled {
